# fusao-sensorial-filtro-kalman

./: COMORODAR.md  README.md
kalman_localization/: CMakeLists.txt  README.md  docker-compose.override.yml.example  package.xml
kalman_localization/config/: ekf_odom.yaml  ekf_odom_imu.yaml  ekf_odom_imu_gps.yaml
kalman_localization/launch/: ekf_odom.launch  ekf_odom_imu.launch  ekf_odom_imu_gps.launch  husky_kalman.launch
kalman_localization/results/: odom.bag  odom_imu.bag  odom_imu_gps.bag
kalman_localization/results/odom/: metrics.csv  summary.txt
kalman_localization/results/odom_imu/: metrics.csv  summary.txt
kalman_localization/results/odom_imu_gps/: metrics.csv  summary.txt
kalman_localization/scripts/: compute_metrics.py  drive_pattern.py  gps_to_odom.py  run_experiment.sh  turn_test.py
kalman_localization/urdf/: kalman_extras.urdf
